# OSSParsers

./: .gitignore  pyproject.toml
parser/: Makefile
parser/parser/: settings.py
parser/parser/spiders/: rosstat.py
parser/parser/utils/: env.py
